# CMakeProjectTemplate

./: CMakeLists.txt  ReadMe.md
cmake/: FindCereal.cmake  FindMATLAB.cmake  FindOpenBLAS.cmake
ext/: CMakeLists.txt
ext/cereal/: CMakeLists.txt  ReadMe.md
ext/eigen3/: CMakeLists.txt  ReadMe.md
ext/googletest/: CMakeLists.txt  ReadMe.md
ext/wheels/: CMakeLists.txt
src/: CMakeLists.txt  lib.cpp  main.cpp  unittest.cpp
